# llm-ops

./: .gitignore  README.md  docker-compose.yml
llmops-api/: .env  README.md  pyproject.toml  pytest.ini  start_celery.ps1
llmops-api/app/http/: app.py  module.py
llmops-api/config/: __init__.py  config.py  default_config.py
llmops-api/internal/core/file_extractor/: file_extractor.py
llmops-api/internal/core/memory/: token_buffer_memory.py
llmops-api/internal/core/retrievers/: full_text_retriever.py  (+1 more)
llmops-api/internal/entity/: cache_entity.py  conversation_entity.py  dataset_entity.py  jieba_entity.py  upload_file_entity.py
llmops-api/internal/exception/: __init__.py  exception.py
llmops-api/internal/extension/: __init__.py  celery_exetension.py  database_extension.py  logging_extension.py  migrate_extension.py  redis_extension.py
llmops-api/internal/handler/: __init__.py  api_tool_handler.py  app_handler.py  builtin_tool_handler.py  dataset_handler.py  document_handler.py  segment_handler.py  upload_file_handler.py
llmops-api/internal/migration/: env.py
llmops-api/internal/model/: __init__.py  api_tool.py  app.py  conversation.py  dataset.py  module.py  upload_file.py
llmops-api/internal/router/: __init__.py  router.py
llmops-api/internal/schema/: api_tool_schema.py  app_schema.py  dataset_schema.py  document_schema.py  schema.py  segment_schema.py  upload_file_schema.py
llmops-api/internal/server/: http.py
llmops-api/internal/service/: __init__.py  api_tool_service.py  app_service.py  base_service.py  builtin_tool_service.py  conversation_service.py  cos_service.py  dataset_service.py  document_service.py  embeddings_service.py  indexing_service.py  jieba_service.py  keyword_table_service.py  process_rule_service.py  retrieval_service.py  segment_service.py  upload_file_service.py  vector_database_service.py
llmops-api/internal/task/: dataset_task.py  demo_task.py  document_task.py
llmops-api/pkg/: a.py
llmops-api/pkg/paginator/: __init__.py  paginator.py
llmops-api/pkg/response/: __init__.py  http_code.py  response.py
llmops-api/pkg/sqlalchemy/: sqlalchemy.py
llmops-api/storage/log/: app.log.2026-04-14  celery
llmops-api/storage/memory/: chat_history.txt
llmops-api/study/1/: 1.子图实现多智能体.py  1.断点实现人在环路示例.py  2.py  2.修改图状态消息.py  3.py  4.py  ReACT.py  ReACT2.py  SERPER.py  deepagent1.py  gaode_weather_tool.py  gaode_weather_tool2.py  graph1.py  graph2.py  huggingface.py  out_json.py  prompt.py  read-pdf.py  weaviate.py  with_structured_output.py  使用须知.txt  呼叫中心线路安全异常事件情况说明.docx
llmops-api/test/: conftest.py
(+64 files in other folders)
