[project]
name = "fastapi-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-migrate>=4.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-wtf>=1.2.2",
    "injector>=0.24.0",
    "openai>=2.24.0",
    "psycopg2>=2.9.11",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
